Rename LPs to LPRecords; add Agent LP classification provenance
- /api/lps -> /api/lpRecords (incl. /rates, /ingest, /classification);
  Lp entity/DTO/controller/repository renamed to LpRecord*
- New agent_cls_source column (EXTRACTED/DERIVED/USER_EDITED) with check
  constraint; provenance threaded through ingest, commit, classification,
  and PATCH endpoints
- AgentLpClassificationDeriver auto-assigns Agent LP Category from
  investor type/ratings when the Agent BB file leaves it blank
- POST /bb-templates/import gains mode=upsert for idempotent imports

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>